name:          chirp
version:       0.0.0
synopsis:      A decentralized peer-to-peer chat application.
license:       GPL-3
license-file:  LICENSE
copyright:     2017 DFINITY Stiftung
author:        Enzo Haussecker <enzo@dfinity.org>
maintainer:    Enzo Haussecker <enzo@dfinity.org>
stability:     Experimental
category:      Network
homepage:      https://github.com/dfinity/hs-chirp
bug-reports:   https://github.com/dfinity/hs-chirp/issues
build-type:    Simple
cabal-version: >=1.10

executable chirp
  build-depends:
    RFC1751,
    aeson,
    base,
    base16-bytestring,
    binary,
    bytestring,
    cmdargs,
    conduit,
    cryptohash,
    data-default-class,
    directory,
    entropy,
    filepath,
    monad-control,
    mtl,
    resourcet,
    revolver,
    scotty,
    secp256k1,
    stm,
    stm-conduit,
    text,
    tinylog,
    transformers,
    transformers-base,
    vector,
    wai,
    wai-extra
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    TupleSections
    UndecidableInstances
  default-language:
    Haskell2010
  extra-libraries:
    revolver
  ghc-options:
    -O2
    -Wall
    -fno-warn-name-shadowing
    -fno-warn-orphans
    -threaded
  hs-source-dirs:
    src
  main-is:
    Main.hs
  other-modules:
    Conduit
    Config
    Log
    Message
    Orphan
    Seed
    UI
